--- a/HealthSupportApp/pom.xml
+++ b/HealthSupportApp/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 	<groupId>com.health.app</groupId>
 	<artifactId>HealthSupportApp</artifactId>
-	<version>0.0.4-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<version>0.0.6-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>HealthSupportApp</name>
 	<description>Health Organization Management</description>
 
@@ -22,17 +22,8 @@
 	<dependencies>
 	
 
-<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>4.0.1</version>
-    <scope>provided</scope>
-  </dependency>
   
-  <dependency>
-    <groupId>jakarta.validation</groupId>
-    <artifactId>jakarta.validation-api</artifactId>
-</dependency>
+  
   <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-mail</artifactId>
@@ -60,19 +51,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web-services</artifactId>
-		</dependency>
+		
 <!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
  <dependency>
     <groupId>jakarta.servlet</groupId>
     <artifactId>jakarta.servlet-api</artifactId>
-    <scope>provided</scope>
     </dependency>
  <dependency>
     <groupId>com.mysql</groupId>
     <artifactId>mysql-connector-j</artifactId>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-thymeleaf</artifactId>
 </dependency>
 <!-- 		//  start abdus added this dependency  -->
 
