--- a/HealthSupportApp/src/main/resources/application.properties
+++ b/HealthSupportApp/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.jsp
 
 #Persistence Related Code
-spring.datasource.url=jdbc:mysql://localhost/healthmgmtdb?createDatabaseIfNotExist=true&useSSL=false
-#spring.datasource.url=jdbc:mysql://hdappdb.clkfh2zp4dyg.ap-south-1.rds.amazonaws.com:3306/hdappdb
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost/healthmgmtdb?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:mysql://healthcaredb.c708yco80h7y.ap-south-1.rds.amazonaws.com/healthcaredb
+spring.datasource.username=healthcaredb
 spring.datasource.password=Abdus7001
-server.port=5001
+#server.port=5001
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jpa.properties.max_allowed_packet=2000
+spring.jpa.open-in-view = false
 
 
 #spring.datasource.driver=com.mysql.jdbc.Driver  not used for cloud Db
 
-spring.session.store-type=none
+#spring.session.store-type=none
 
 # ===============================
 # = JPA / HIBERNATE
@@ -24,8 +28,8 @@ spring.session.store-type=none
 spring.jpa.database = MYSQL
 
 # Show or not log for each sql query
-spring.jpa.show-sql = true
-spring.jpa.generate-ddl=true
+#spring.jpa.show-sql = true
+#spring.jpa.generate-ddl=true
 
 # Ddl auto must be set to "create" to ensure that Hibernate will run the
 # import.sql file at application startup. if use create then it will delte all record 
@@ -35,11 +39,11 @@ spring.jpa.hibernate.ddl-auto = update
 
 
 # SQL dialect for genereting optimized queries
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # spring.jpa.properties.hibernate.default_schema=healthmgmtdb
-logging.level.org.hibernate.type=TRACE
-logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.SQL=debug
 #spring.datasource.tomcat.max-wait=20000
 #spring.datasource.tomcat.max-active=50
 #spring.datasource.tomcat.max-idle=20
