--- a/HealthSupportApp/src/main/resources/application.properties
+++ b/HealthSupportApp/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 #spring.mvc.view.suffix=.jsp
 
 spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.jsp
+spring.thymeleaf.suffix=.html
+server.error.whitelabel.enabled=false
 
 #Persistence Related Code
 #spring.datasource.url=jdbc:mysql://localhost/healthmgmtdb?createDatabaseIfNotExist=true&useSSL=false
@@ -13,7 +14,7 @@ spring.datasource.password=Abdus7001
 #server.port=5001
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.jpa.properties.max_allowed_packet=2000
-spring.jpa.open-in-view = false
+
 
 
 #spring.datasource.driver=com.mysql.jdbc.Driver  not used for cloud Db
