--- a/HealthSupportApp/src/main/resources/application.properties
+++ b/HealthSupportApp/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 
-#spring.mvc.view.prefix=/WEB-INF/view/
-#spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-server.error.whitelabel.enabled=false
+
+
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+
 
 #Persistence Related Code
-#spring.datasource.url=jdbc:mysql://localhost/healthmgmtdb?createDatabaseIfNotExist=true&useSSL=false
+#spring.datasource.url=jdbc:sqlserver://quickhealth.database.windows.net:1433;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.username=azuredb
+#spring.datasource.password=Abdus@7002
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+
 spring.datasource.url=jdbc:mysql://healthcaredb.c708yco80h7y.ap-south-1.rds.amazonaws.com/healthcaredb
 spring.datasource.username=healthcaredb
 spring.datasource.password=Abdus7001
@@ -26,7 +33,7 @@ spring.jpa.properties.max_allowed_packet=2000
 # ===============================
 
 # Specify the DBMS
-spring.jpa.database = MYSQL
+#spring.jpa.database = MYSQL
 
 # Show or not log for each sql query
 #spring.jpa.show-sql = true
@@ -40,7 +47,7 @@ spring.jpa.hibernate.ddl-auto = update
 
 
 # SQL dialect for genereting optimized queries
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # spring.jpa.properties.hibernate.default_schema=healthmgmtdb
 #logging.level.org.hibernate.type=TRACE
